language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_type_from_aliased_import_imported_name.snap
---
source: language-server/src/tests/rename.rs
expression: "\nimport mod.{type Wibble as Wobble}\n\npub fn main(w: Wobble) -> mod.Wibble { todo }\n"
---
----- BEFORE RENAME
-- mod.gleam

pub type Wibble { Constructor }

fn wibble(w: Wibble) -> Wibble { todo }


-- app.gleam

import mod.{type Wibble as Wobble}
                           ↑▔▔▔▔▔ 

pub fn main(w: Wobble) -> mod.Wibble { todo }


----- AFTER RENAME
-- mod.gleam

pub type Wibble { Constructor }

fn wibble(w: Wibble) -> Wibble { todo }


-- app.gleam

import mod.{type Wibble as SomeType}

pub fn main(w: SomeType) -> mod.Wibble { todo }
