language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_type_from_qualified_reference.snap
---
source: language-server/src/tests/rename.rs
expression: "\nimport mod\n\npub fn main(w: mod.Wibble) -> mod.Wibble { todo }\n"
---
----- BEFORE RENAME
-- mod.gleam

pub type Wibble { Constructor }

fn wibble(w: Wibble) -> Wibble { todo }


-- app.gleam

import mod

pub fn main(w: mod.Wibble) -> mod.Wibble { todo }
                   ↑▔▔▔▔▔                        


----- AFTER RENAME
-- mod.gleam

pub type SomeType { Constructor }

fn wibble(w: SomeType) -> SomeType { todo }


-- app.gleam

import mod

pub fn main(w: mod.SomeType) -> mod.SomeType { todo }
