language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_type_from_variant_constructor_argument.snap
---
source: language-server/src/tests/rename.rs
expression: "\nimport mod\n\npub type Wobble {\n  Wobble(w: mod.Wibble)\n}\n"
---
----- BEFORE RENAME
-- mod.gleam

pub type Wibble {
  Wibble
}

pub fn main() {
  let wibble = Wibble
}


-- app.gleam

import mod

pub type Wobble {
  Wobble(w: mod.Wibble)
                ↑▔▔▔▔▔ 
}


----- AFTER RENAME
-- mod.gleam

pub type SomeType {
  Wibble
}

pub fn main() {
  let wibble = Wibble
}


-- app.gleam

import mod

pub type Wobble {
  Wobble(w: mod.SomeType)
}
