language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_type_variable_in_constant.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub const empty: List(#(anything, anything)) = []\n"
---
----- BEFORE RENAME
-- app.gleam

pub const empty: List(#(anything, anything)) = []
                        ↑▔▔▔▔▔▔▔                 


----- AFTER RENAME
-- app.gleam

pub const empty: List(#(a, a)) = []
