language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_type_variable_in_custom_type_from_constructor.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub type Option(anything) {\n  Some(anything)\n  None\n}\n"
---
----- BEFORE RENAME
-- app.gleam

pub type Option(anything) {
  Some(anything)
       ↑▔▔▔▔▔▔▔ 
  None
}


----- AFTER RENAME
-- app.gleam

pub type Option(something) {
  Some(something)
  None
}
